// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
Object {
  "displayName": "CfnPublicRepositoryProps",
  "docs": Object {
    "links": Array [
      "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html",
    ],
    "summary": "Properties for defining a \`AWS::ECR::PublicRepository\`.",
  },
  "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
  "properties": Array [
    Object {
      "default": undefined,
      "displayName": "RepositoryCatalogData",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.property.RepositoryCatalogData",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
      "optional": true,
      "type": Object {
        "formattingPattern": "object",
      },
      "usage": "public object RepositoryCatalogData { get; set; }",
    },
    Object {
      "default": undefined,
      "displayName": "RepositoryName",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.property.RepositoryName",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName",
      "optional": true,
      "type": Object {
        "formattingPattern": "string",
      },
      "usage": "public string RepositoryName { get; set; }",
    },
    Object {
      "default": undefined,
      "displayName": "RepositoryPolicyText",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.property.RepositoryPolicyText",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText",
      "optional": true,
      "type": Object {
        "formattingPattern": "object",
      },
      "usage": "public object RepositoryPolicyText { get; set; }",
    },
    Object {
      "default": undefined,
      "displayName": "Tags",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags",
        ],
        "summary": "\`AWS::ECR::PublicRepository.Tags\`.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.property.Tags",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags",
      "optional": true,
      "type": Object {
        "formattingPattern": "%[]",
        "types": Array [
          Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "CfnTag",
                "fqn": "Amazon.CDK.CfnTag",
                "id": "@aws-cdk/core.CfnTag",
                "packageName": "@aws-cdk/core",
                "packageVersion": "99.99.99",
              },
            ],
          },
        ],
      },
      "usage": "public CfnTag[] Tags { get; set; }",
    },
  ],
  "usage": "using Amazon.CDK.AWS.ECR;

new CfnPublicRepositoryProps {
    object RepositoryCatalogData = null,
    string RepositoryName = null,
    object RepositoryPolicyText = null,
    CfnTag[] Tags = null
};",
}
`;

exports[`csharp snapshot 2`] = `
" CfnPublicRepositoryProps <a name=\\"CfnPublicRepositoryProps\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\"></a>

Properties for defining a \`AWS::ECR::PublicRepository\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html)

# Initializer <a name=\\"Initializer\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.Initializer\\"></a>

\`\`\`csharp
using Amazon.CDK.AWS.ECR;

new CfnPublicRepositoryProps {
    object RepositoryCatalogData = null,
    string RepositoryName = null,
    object RepositoryPolicyText = null,
    CfnTag[] Tags = null
};
\`\`\`

# Properties <a name=\\"Properties\\" id=\\"Properties\\"></a>

| **Property** | **Type** | **Description** |
| --- | --- | --- |
| <code>RepositoryCatalogData</code> | <code>object</code> | \`AWS::ECR::PublicRepository.RepositoryCatalogData\`. |
| <code>RepositoryName</code> | <code>string</code> | \`AWS::ECR::PublicRepository.RepositoryName\`. |
| <code>RepositoryPolicyText</code> | <code>object</code> | \`AWS::ECR::PublicRepository.RepositoryPolicyText\`. |
| <code>Tags</code> | <code>Amazon.CDK.CfnTag[]</code> | \`AWS::ECR::PublicRepository.Tags\`. |

---

**<code>RepositoryCatalogData</code>**
\`\`\`csharp
public object RepositoryCatalogData { get; set; }
\`\`\`

- *Type:* <code>object</code>

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---

**<code>RepositoryName</code>**
\`\`\`csharp
public string RepositoryName { get; set; }
\`\`\`

- *Type:* <code>string</code>

\`AWS::ECR::PublicRepository.RepositoryName\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname)

---

**<code>RepositoryPolicyText</code>**
\`\`\`csharp
public object RepositoryPolicyText { get; set; }
\`\`\`

- *Type:* <code>object</code>

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext)

---

**<code>Tags</code>**
\`\`\`csharp
public CfnTag[] Tags { get; set; }
\`\`\`

- *Type:* <code>Amazon.CDK.CfnTag[]</code>

\`AWS::ECR::PublicRepository.Tags\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags)

---
"
`;

exports[`go snapshot 1`] = `
Object {
  "displayName": "CfnPublicRepositoryProps",
  "docs": Object {
    "links": Array [
      "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html",
    ],
    "summary": "Properties for defining a \`AWS::ECR::PublicRepository\`.",
  },
  "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepositoryProps",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
  "properties": Array [
    Object {
      "default": undefined,
      "displayName": "RepositoryCatalogData",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      },
      "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepositoryProps.property.RepositoryCatalogData",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
      "optional": true,
      "type": Object {
        "formattingPattern": "interface{}",
      },
      "usage": "RepositoryCatalogData interface{}",
    },
    Object {
      "default": undefined,
      "displayName": "RepositoryName",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      },
      "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepositoryProps.property.RepositoryName",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName",
      "optional": true,
      "type": Object {
        "formattingPattern": "*string",
      },
      "usage": "RepositoryName *string",
    },
    Object {
      "default": undefined,
      "displayName": "RepositoryPolicyText",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      },
      "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepositoryProps.property.RepositoryPolicyText",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText",
      "optional": true,
      "type": Object {
        "formattingPattern": "interface{}",
      },
      "usage": "RepositoryPolicyText interface{}",
    },
    Object {
      "default": undefined,
      "displayName": "Tags",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags",
        ],
        "summary": "\`AWS::ECR::PublicRepository.Tags\`.",
      },
      "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepositoryProps.property.Tags",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags",
      "optional": true,
      "type": Object {
        "formattingPattern": "*[]%",
        "types": Array [
          Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "CfnTag",
                "fqn": "github.com/aws/aws-cdk-go/awscdk/awscdkcore.CfnTag",
                "id": "@aws-cdk/core.CfnTag",
                "packageName": "@aws-cdk/core",
                "packageVersion": "99.99.99",
              },
            ],
          },
        ],
      },
      "usage": "Tags *[]CfnTag",
    },
  ],
  "usage": "import \\"github.com/aws/aws-cdk-go/awscdkawsecr\\"

&awscdkawsecr.CfnPublicRepositoryProps {
	RepositoryCatalogData: interface{},
	RepositoryName: *string,
	RepositoryPolicyText: interface{},
	Tags: *[]github.com/aws/aws-cdk-go/awscdk/awscdkcore.CfnTag,
}",
}
`;

exports[`go snapshot 2`] = `
" CfnPublicRepositoryProps <a name=\\"CfnPublicRepositoryProps\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\"></a>

Properties for defining a \`AWS::ECR::PublicRepository\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html)

# Initializer <a name=\\"Initializer\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.Initializer\\"></a>

\`\`\`go
import \\"github.com/aws/aws-cdk-go/awscdkawsecr\\"

&awscdkawsecr.CfnPublicRepositoryProps {
	RepositoryCatalogData: interface{},
	RepositoryName: *string,
	RepositoryPolicyText: interface{},
	Tags: *[]github.com/aws/aws-cdk-go/awscdk/awscdkcore.CfnTag,
}
\`\`\`

# Properties <a name=\\"Properties\\" id=\\"Properties\\"></a>

| **Property** | **Type** | **Description** |
| --- | --- | --- |
| <code>RepositoryCatalogData</code> | <code>interface{}</code> | \`AWS::ECR::PublicRepository.RepositoryCatalogData\`. |
| <code>RepositoryName</code> | <code>*string</code> | \`AWS::ECR::PublicRepository.RepositoryName\`. |
| <code>RepositoryPolicyText</code> | <code>interface{}</code> | \`AWS::ECR::PublicRepository.RepositoryPolicyText\`. |
| <code>Tags</code> | <code>*[]github.com/aws/aws-cdk-go/awscdk/awscdkcore.CfnTag</code> | \`AWS::ECR::PublicRepository.Tags\`. |

---

**<code>RepositoryCatalogData</code>**
\`\`\`go
RepositoryCatalogData interface{}
\`\`\`

- *Type:* <code>interface{}</code>

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---

**<code>RepositoryName</code>**
\`\`\`go
RepositoryName *string
\`\`\`

- *Type:* <code>*string</code>

\`AWS::ECR::PublicRepository.RepositoryName\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname)

---

**<code>RepositoryPolicyText</code>**
\`\`\`go
RepositoryPolicyText interface{}
\`\`\`

- *Type:* <code>interface{}</code>

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext)

---

**<code>Tags</code>**
\`\`\`go
Tags *[]CfnTag
\`\`\`

- *Type:* <code>*[]github.com/aws/aws-cdk-go/awscdk/awscdkcore.CfnTag</code>

\`AWS::ECR::PublicRepository.Tags\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags)

---
"
`;

exports[`java snapshot 1`] = `
Object {
  "displayName": "CfnPublicRepositoryProps",
  "docs": Object {
    "links": Array [
      "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html",
    ],
    "summary": "Properties for defining a \`AWS::ECR::PublicRepository\`.",
  },
  "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
  "properties": Array [
    Object {
      "default": undefined,
      "displayName": "repositoryCatalogData",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
      "optional": true,
      "type": Object {
        "formattingPattern": "java.lang.Object",
      },
      "usage": "public java.lang.Object getRepositoryCatalogData();",
    },
    Object {
      "default": undefined,
      "displayName": "repositoryName",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.property.repositoryName",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName",
      "optional": true,
      "type": Object {
        "formattingPattern": "java.lang.String",
      },
      "usage": "public java.lang.String getRepositoryName();",
    },
    Object {
      "default": undefined,
      "displayName": "repositoryPolicyText",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.property.repositoryPolicyText",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText",
      "optional": true,
      "type": Object {
        "formattingPattern": "java.lang.Object",
      },
      "usage": "public java.lang.Object getRepositoryPolicyText();",
    },
    Object {
      "default": undefined,
      "displayName": "tags",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags",
        ],
        "summary": "\`AWS::ECR::PublicRepository.Tags\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.property.tags",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags",
      "optional": true,
      "type": Object {
        "formattingPattern": "java.util.List<%>",
        "types": Array [
          Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "CfnTag",
                "fqn": "software.amazon.awscdk.core.CfnTag",
                "id": "@aws-cdk/core.CfnTag",
                "packageName": "@aws-cdk/core",
                "packageVersion": "99.99.99",
              },
            ],
          },
        ],
      },
      "usage": "public java.util.List<CfnTag> getTags();",
    },
  ],
  "usage": "import software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps;

CfnPublicRepositoryProps.builder()
//  .repositoryCatalogData(java.lang.Object)
//  .repositoryName(java.lang.String)
//  .repositoryPolicyText(java.lang.Object)
//  .tags(java.util.List<CfnTag>)
    .build();",
}
`;

exports[`java snapshot 2`] = `
" CfnPublicRepositoryProps <a name=\\"CfnPublicRepositoryProps\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\"></a>

Properties for defining a \`AWS::ECR::PublicRepository\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html)

# Initializer <a name=\\"Initializer\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.Initializer\\"></a>

\`\`\`java
import software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps;

CfnPublicRepositoryProps.builder()
//  .repositoryCatalogData(java.lang.Object)
//  .repositoryName(java.lang.String)
//  .repositoryPolicyText(java.lang.Object)
//  .tags(java.util.List<CfnTag>)
    .build();
\`\`\`

# Properties <a name=\\"Properties\\" id=\\"Properties\\"></a>

| **Property** | **Type** | **Description** |
| --- | --- | --- |
| <code>repositoryCatalogData</code> | <code>java.lang.Object</code> | \`AWS::ECR::PublicRepository.RepositoryCatalogData\`. |
| <code>repositoryName</code> | <code>java.lang.String</code> | \`AWS::ECR::PublicRepository.RepositoryName\`. |
| <code>repositoryPolicyText</code> | <code>java.lang.Object</code> | \`AWS::ECR::PublicRepository.RepositoryPolicyText\`. |
| <code>tags</code> | <code>java.util.List<software.amazon.awscdk.core.CfnTag></code> | \`AWS::ECR::PublicRepository.Tags\`. |

---

**<code>repositoryCatalogData</code>**
\`\`\`java
public java.lang.Object getRepositoryCatalogData();
\`\`\`

- *Type:* <code>java.lang.Object</code>

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---

**<code>repositoryName</code>**
\`\`\`java
public java.lang.String getRepositoryName();
\`\`\`

- *Type:* <code>java.lang.String</code>

\`AWS::ECR::PublicRepository.RepositoryName\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname)

---

**<code>repositoryPolicyText</code>**
\`\`\`java
public java.lang.Object getRepositoryPolicyText();
\`\`\`

- *Type:* <code>java.lang.Object</code>

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext)

---

**<code>tags</code>**
\`\`\`java
public java.util.List<CfnTag> getTags();
\`\`\`

- *Type:* <code>java.util.List<software.amazon.awscdk.core.CfnTag></code>

\`AWS::ECR::PublicRepository.Tags\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags)

---
"
`;

exports[`python snapshot 1`] = `
Object {
  "displayName": "CfnPublicRepositoryProps",
  "docs": Object {
    "links": Array [
      "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html",
    ],
    "summary": "Properties for defining a \`AWS::ECR::PublicRepository\`.",
  },
  "fqn": "aws_cdk.aws_ecr.CfnPublicRepositoryProps",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
  "properties": Array [
    Object {
      "default": undefined,
      "displayName": "repository_catalog_data",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepositoryProps.property.repository_catalog_data",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
      "optional": true,
      "type": Object {
        "formattingPattern": "typing.Any",
      },
      "usage": "repository_catalog_data: typing.Any",
    },
    Object {
      "default": undefined,
      "displayName": "repository_name",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepositoryProps.property.repository_name",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName",
      "optional": true,
      "type": Object {
        "formattingPattern": "str",
      },
      "usage": "repository_name: str",
    },
    Object {
      "default": undefined,
      "displayName": "repository_policy_text",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepositoryProps.property.repository_policy_text",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText",
      "optional": true,
      "type": Object {
        "formattingPattern": "typing.Any",
      },
      "usage": "repository_policy_text: typing.Any",
    },
    Object {
      "default": undefined,
      "displayName": "tags",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags",
        ],
        "summary": "\`AWS::ECR::PublicRepository.Tags\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepositoryProps.property.tags",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags",
      "optional": true,
      "type": Object {
        "formattingPattern": "typing.List[%]",
        "types": Array [
          Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "CfnTag",
                "fqn": "aws_cdk.core.CfnTag",
                "id": "@aws-cdk/core.CfnTag",
                "packageName": "@aws-cdk/core",
                "packageVersion": "99.99.99",
              },
            ],
          },
        ],
      },
      "usage": "tags: typing.List[CfnTag]",
    },
  ],
  "usage": "import aws_cdk.aws_ecr

aws_cdk.aws_ecr.CfnPublicRepositoryProps(
  repository_catalog_data: typing.Any = None,
  repository_name: str = None,
  repository_policy_text: typing.Any = None,
  tags: typing.List[CfnTag] = None
)",
}
`;

exports[`python snapshot 2`] = `
" CfnPublicRepositoryProps <a name=\\"CfnPublicRepositoryProps\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\"></a>

Properties for defining a \`AWS::ECR::PublicRepository\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html)

# Initializer <a name=\\"Initializer\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.Initializer\\"></a>

\`\`\`python
import aws_cdk.aws_ecr

aws_cdk.aws_ecr.CfnPublicRepositoryProps(
  repository_catalog_data: typing.Any = None,
  repository_name: str = None,
  repository_policy_text: typing.Any = None,
  tags: typing.List[CfnTag] = None
)
\`\`\`

# Properties <a name=\\"Properties\\" id=\\"Properties\\"></a>

| **Property** | **Type** | **Description** |
| --- | --- | --- |
| <code>repository_catalog_data</code> | <code>typing.Any</code> | \`AWS::ECR::PublicRepository.RepositoryCatalogData\`. |
| <code>repository_name</code> | <code>str</code> | \`AWS::ECR::PublicRepository.RepositoryName\`. |
| <code>repository_policy_text</code> | <code>typing.Any</code> | \`AWS::ECR::PublicRepository.RepositoryPolicyText\`. |
| <code>tags</code> | <code>typing.List[aws_cdk.core.CfnTag]</code> | \`AWS::ECR::PublicRepository.Tags\`. |

---

**<code>repository_catalog_data</code>**
\`\`\`python
repository_catalog_data: typing.Any
\`\`\`

- *Type:* <code>typing.Any</code>

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---

**<code>repository_name</code>**
\`\`\`python
repository_name: str
\`\`\`

- *Type:* <code>str</code>

\`AWS::ECR::PublicRepository.RepositoryName\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname)

---

**<code>repository_policy_text</code>**
\`\`\`python
repository_policy_text: typing.Any
\`\`\`

- *Type:* <code>typing.Any</code>

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext)

---

**<code>tags</code>**
\`\`\`python
tags: typing.List[CfnTag]
\`\`\`

- *Type:* <code>typing.List[aws_cdk.core.CfnTag]</code>

\`AWS::ECR::PublicRepository.Tags\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags)

---
"
`;

exports[`typescript snapshot 1`] = `
Object {
  "displayName": "CfnPublicRepositoryProps",
  "docs": Object {
    "links": Array [
      "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html",
    ],
    "summary": "Properties for defining a \`AWS::ECR::PublicRepository\`.",
  },
  "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
  "properties": Array [
    Object {
      "default": undefined,
      "displayName": "repositoryCatalogData",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
      "optional": true,
      "type": Object {
        "formattingPattern": "any",
      },
      "usage": "public readonly repositoryCatalogData: any;",
    },
    Object {
      "default": undefined,
      "displayName": "repositoryName",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName",
      "optional": true,
      "type": Object {
        "formattingPattern": "string",
      },
      "usage": "public readonly repositoryName: string;",
    },
    Object {
      "default": undefined,
      "displayName": "repositoryPolicyText",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText",
      "optional": true,
      "type": Object {
        "formattingPattern": "any",
      },
      "usage": "public readonly repositoryPolicyText: any;",
    },
    Object {
      "default": undefined,
      "displayName": "tags",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags",
        ],
        "summary": "\`AWS::ECR::PublicRepository.Tags\`.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags",
      "optional": true,
      "type": Object {
        "formattingPattern": "%[]",
        "types": Array [
          Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "CfnTag",
                "fqn": "@aws-cdk/core.CfnTag",
                "id": "@aws-cdk/core.CfnTag",
                "packageName": "@aws-cdk/core",
                "packageVersion": "99.99.99",
              },
            ],
          },
        ],
      },
      "usage": "public readonly tags: CfnTag[];",
    },
  ],
  "usage": "import { CfnPublicRepositoryProps } from '@aws-cdk/aws-ecr'

const cfnPublicRepositoryProps: CfnPublicRepositoryProps = { ... }",
}
`;

exports[`typescript snapshot 2`] = `
" CfnPublicRepositoryProps <a name=\\"CfnPublicRepositoryProps\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\"></a>

Properties for defining a \`AWS::ECR::PublicRepository\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html)

# Initializer <a name=\\"Initializer\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.Initializer\\"></a>

\`\`\`typescript
import { CfnPublicRepositoryProps } from '@aws-cdk/aws-ecr'

const cfnPublicRepositoryProps: CfnPublicRepositoryProps = { ... }
\`\`\`

# Properties <a name=\\"Properties\\" id=\\"Properties\\"></a>

| **Property** | **Type** | **Description** |
| --- | --- | --- |
| <code>repositoryCatalogData</code> | <code>any</code> | \`AWS::ECR::PublicRepository.RepositoryCatalogData\`. |
| <code>repositoryName</code> | <code>string</code> | \`AWS::ECR::PublicRepository.RepositoryName\`. |
| <code>repositoryPolicyText</code> | <code>any</code> | \`AWS::ECR::PublicRepository.RepositoryPolicyText\`. |
| <code>tags</code> | <code>@aws-cdk/core.CfnTag[]</code> | \`AWS::ECR::PublicRepository.Tags\`. |

---

**<code>repositoryCatalogData</code>**
\`\`\`typescript
public readonly repositoryCatalogData: any;
\`\`\`

- *Type:* <code>any</code>

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---

**<code>repositoryName</code>**
\`\`\`typescript
public readonly repositoryName: string;
\`\`\`

- *Type:* <code>string</code>

\`AWS::ECR::PublicRepository.RepositoryName\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname)

---

**<code>repositoryPolicyText</code>**
\`\`\`typescript
public readonly repositoryPolicyText: any;
\`\`\`

- *Type:* <code>any</code>

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext)

---

**<code>tags</code>**
\`\`\`typescript
public readonly tags: CfnTag[];
\`\`\`

- *Type:* <code>@aws-cdk/core.CfnTag[]</code>

\`AWS::ECR::PublicRepository.Tags\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags)

---
"
`;

exports[`wing snapshot 1`] = `
Object {
  "displayName": "CfnPublicRepositoryProps",
  "docs": Object {
    "links": Array [
      "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html",
    ],
    "summary": "Properties for defining a \`AWS::ECR::PublicRepository\`.",
  },
  "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
  "properties": Array [
    Object {
      "default": undefined,
      "displayName": "repositoryCatalogData",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
      "optional": true,
      "type": Object {
        "formattingPattern": "any",
      },
      "usage": "repositoryCatalogData: any;",
    },
    Object {
      "default": undefined,
      "displayName": "repositoryName",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName",
      "optional": true,
      "type": Object {
        "formattingPattern": "str",
      },
      "usage": "repositoryName: str;",
    },
    Object {
      "default": undefined,
      "displayName": "repositoryPolicyText",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText",
      "optional": true,
      "type": Object {
        "formattingPattern": "any",
      },
      "usage": "repositoryPolicyText: any;",
    },
    Object {
      "default": undefined,
      "displayName": "tags",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags",
        ],
        "summary": "\`AWS::ECR::PublicRepository.Tags\`.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags",
      "optional": true,
      "type": Object {
        "formattingPattern": "MutArray&lt;%&gt;",
        "types": Array [
          Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "CfnTag",
                "fqn": "@aws-cdk/core.CfnTag",
                "id": "@aws-cdk/core.CfnTag",
                "packageName": "@aws-cdk/core",
                "packageVersion": "99.99.99",
              },
            ],
          },
        ],
      },
      "usage": "tags: MutArray&lt;CfnTag&gt;;",
    },
  ],
  "usage": "bring { CfnPublicRepositoryProps } from \\"@aws-cdk/aws-ecr\\"

let cfnPublicRepositoryProps = CfnPublicRepositoryProps { ... }",
}
`;

exports[`wing snapshot 2`] = `
" CfnPublicRepositoryProps <a name=\\"CfnPublicRepositoryProps\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\"></a>

Properties for defining a \`AWS::ECR::PublicRepository\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html)

# Initializer <a name=\\"Initializer\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.Initializer\\"></a>

\`\`\`wing
bring { CfnPublicRepositoryProps } from \\"@aws-cdk/aws-ecr\\"

let cfnPublicRepositoryProps = CfnPublicRepositoryProps { ... }
\`\`\`

# Properties <a name=\\"Properties\\" id=\\"Properties\\"></a>

| **Property** | **Type** | **Description** |
| --- | --- | --- |
| <code>repositoryCatalogData</code> | <code>any</code> | \`AWS::ECR::PublicRepository.RepositoryCatalogData\`. |
| <code>repositoryName</code> | <code>str</code> | \`AWS::ECR::PublicRepository.RepositoryName\`. |
| <code>repositoryPolicyText</code> | <code>any</code> | \`AWS::ECR::PublicRepository.RepositoryPolicyText\`. |
| <code>tags</code> | <code>MutArray&lt;@aws-cdk/core.CfnTag&gt;</code> | \`AWS::ECR::PublicRepository.Tags\`. |

---

**<code>repositoryCatalogData</code>**
\`\`\`wing
repositoryCatalogData: any;
\`\`\`

- *Type:* <code>any</code>

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---

**<code>repositoryName</code>**
\`\`\`wing
repositoryName: str;
\`\`\`

- *Type:* <code>str</code>

\`AWS::ECR::PublicRepository.RepositoryName\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname)

---

**<code>repositoryPolicyText</code>**
\`\`\`wing
repositoryPolicyText: any;
\`\`\`

- *Type:* <code>any</code>

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext)

---

**<code>tags</code>**
\`\`\`wing
tags: MutArray<CfnTag>;
\`\`\`

- *Type:* <code>MutArray&lt;@aws-cdk/core.CfnTag&gt;</code>

\`AWS::ECR::PublicRepository.Tags\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags)

---
"
`;
